Archive/50b5dca9e62c39333597e22b534d5bf5-2134f12c1d837800b912c553b3b8db52/output
+ g++ -std=c++11 -Wall main.cpp
main.cpp: In function ‘int main()’:
main.cpp:40:55: error: conversion from ‘list<seq<1u, 4u>, seq<1u, 5u>, seq<1u, 6u>, seq<1u, 7u>, seq<2u, 4u>, seq<2u, 5u>, seq<2u, 6u>, seq<2u, 7u>, seq<3u, 4u>, seq<3u, 5u>, seq<3u, 6u>, seq<3u, 7u> >::type {aka list<seq<1u, 4u>, seq<1u, 5u>, seq<1u, 6u>, seq<1u, 7u>, seq<2u, 4u>, seq<2u, 5u>, seq<2u, 6u>, seq<2u, 7u>, seq<3u, 4u>, seq<3u, 5u>, seq<3u, 6u>, seq<3u, 7u> >}’ to non-scalar type ‘main()::<anonymous struct>’ requested
     struct{}_ = cross<seq<1,2,3>, seq<4,5,6,7>>::type{};
                                                       ^
